<resources>
    <string name="app_name">AI Robot Face Prediction</string>
    <string name="app_ver">Version 1.0.4</string>

    <string name="blog_url">https://www.scpepper.tokyo</string>

    <!--menu-->
    <string name="menu_how_to_use">How to Use</string>
    <string name="menu_about_us">About</string>

    <!--button-->
    <string name="button_camera">Camera</string>
    <string name="button_library">Library</string>
    <string name="button_predict">Detection</string>
    <string name="button_information">Information</string>


    <string name="button_ok">OK</string>

</resources>
