<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPopupHeader"
        android:textColor="@color/colorPopupHeaderText"
        android:gravity="center_horizontal"
        android:text="@string/menu_about_us"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/colorButtonNormal" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/browser_actions_bg_grey"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thank you for downloading this app."
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If you have any comments or requests, please contact me from my blog below."
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="  "></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:autoLink="all"
                    android:text="@string/blog_url"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#0000ff"></TextView>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_ok" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>